[fix] userConnection 토큰으로 조회하기